Исправление комментариев после ревью